Fix up navbar header collapsing when viewport is small

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -53,6 +53,20 @@ p {
 
 /* header */
 
+header {
+  .navbar-brand {
+    font-size: 1.65em;
+    text-transform: uppercase;
+    color: #9D9D9D;
+    font-weight: bold;
+    letter-spacing: -1px;
+  }
+
+  .btn-primary {
+    padding: 5px 12px 5px 12px;
+  }
+}
+
 #logo {
   float: left;
   margin-right: 10px;
